re BLET-44: this deals with a couple of categories: classes that can't be instantiated, and not specifying type parameters when they aren't needed, as well as various other SonarLint issues